correct align title

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -18,7 +18,7 @@
 .containerHeader {
     position: absolute;
     top: 80vh;
-    left: 90px;
+    left: 150px;
 }
 
 .title {
